--- a/app/src/main/res/drawable/theme_btn_background.xml
+++ b/app/src/main/res/drawable/theme_btn_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape>
-        <solid android:color="@android:color/holo_blue_light"/>
+        <solid android:color="@color/colorActive"/>
         <corners android:radius="32dp"/>
     </shape>
 </item>
