--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -46,7 +46,7 @@
                     android:gravity="end"
                     android:text="15:00"
                     android:onClick="showTimePickerDialog"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:layout_marginRight="50dp"
                     ></TextView>
         </LinearLayout>
