--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,16 +8,31 @@
         tools:context=".MainActivity"
         android:orientation="vertical">
 
-    <TextView
-            android:id="@+id/textView"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:text="Settings"
-            android:textColor="@color/topClockText"
-            android:textSize="24sp"></TextView>
+            android:orientation="horizontal">
+
+        <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="72dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                app:srcCompat="@mipmap/ic_launcher_foreground"
+                android:contentDescription="Icon" />
+
+        <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.9"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:text="Settings"
+                android:textColor="@color/topClockText"
+                android:textSize="24sp" />
+    </LinearLayout>
+
     <android.support.design.widget.TabLayout
             app:tabTextAppearance="@style/TabLayoutFontSize"
             app:tabSelectedTextColor="@color/colorActive"
@@ -30,8 +45,7 @@
     <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
 
 
 </LinearLayout>
