--- a/app/src/main/res/layout/fragment_themes.xml
+++ b/app/src/main/res/layout/fragment_themes.xml
@@ -49,4 +49,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+    <CheckBox
+            android:id="@+id/self_start_check"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_marginTop="40dp"
+            android:text="Start own clock when paused"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/action_theme" />
 </android.support.constraint.ConstraintLayout>
